cmake_minimum_required(VERSION 3.14)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
project(cs64)
set(CMAKE_CXX_STANDARD 17)
find_package( CURL REQUIRED )
#link_directories(${CMAKE_CURRENT_LIST_DIR}/lib)
include_directories(${CURL_INCLUDE_DIRS})
find_package( CURLPP REQUIRED )
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
link_libraries(${JSONCPP_LIBRARIES})
add_executable(cs64 main.cpp request.cpp utils.cpp)
# target_link_libraries(CanvasDownloader ${CURL_LIBRARIES})
target_link_libraries(cs64 ${CURL_LIBRARIES})
target_link_libraries(cs64 ${CURLPP_LIBRARY})