cmake_minimum_required(VERSION 3.14)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
project(cs64)
set(CMAKE_CXX_STANDARD 17)
find_package( CURL REQUIRED )
#link_directories(${CMAKE_CURRENT_LIST_DIR}/lib)
include_directories(${CURL_INCLUDE_DIRS})
find_package( CURLPP REQUIRED )
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
link_libraries(${JSONCPP_LIBRARIES})

add_executable(canvas main.cpp request.cpp utils.cpp multiLang.cpp)
target_compile_definitions(canvas PRIVATE LANGFROMCMAKE="en")
# target_link_libraries(CanvasDownloader ${CURL_LIBRARIES})
target_link_libraries(canvas ${CURL_LIBRARIES})
target_link_libraries(canvas ${CURLPP_LIBRARY})

add_executable(canvas_zhcn main.cpp request.cpp utils.cpp multiLang.cpp)
target_compile_definitions(canvas_zhcn PRIVATE LANGFROMCMAKE="cn")
# target_link_libraries(CanvasDownloader ${CURL_LIBRARIES})
target_link_libraries(canvas_zhcn ${CURL_LIBRARIES})
target_link_libraries(canvas_zhcn ${CURLPP_LIBRARY})

add_executable(canvas_zhtw main.cpp request.cpp utils.cpp multiLang.cpp)
target_compile_definitions(canvas_zhtw PRIVATE LANGFROMCMAKE="tw")
# target_link_libraries(CanvasDownloader ${CURL_LIBRARIES})
target_link_libraries(canvas_zhtw ${CURL_LIBRARIES})
target_link_libraries(canvas_zhtw ${CURLPP_LIBRARY})